some simple html

--- a/Reaction Test.html
+++ b/Reaction Test.html
@@ -4,16 +4,18 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Reaction Test Page</title>
 </head>
 <body>
-    <div class="d-flex flex-column justify-content-center p-3 bg-success">
-        <h1>How Good of a Gamer are you?</h1>        
+    <div class="d-flex flex-column justify-content-center p-3">
+        <h1>
+            Test your Reaction Speed
+        </h1>
         <p>
-            This test will consists of a reaction speed and accuracy test.<br>
-            This will determine how "Good" of a gamer you could be.
+            Reaction Speed is a good way to test how good of a gamer you will be. <br>
+            This is because majority of games requires some sort of spontaneous reaction.
         </p>
-        <a href="Reaction Test.html" id="startbtn">Click to Start</button>
+        <a href="" id="startbtn">Begin the Test</a>
     </div>
 </body>
 </html>
