--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -1,19 +1,19 @@
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="./style/style.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reaction Test Page</title>
 </head>
 <body>
-    <div class="d-flex flex-column justify-content-center p-3">
+    <div class = testForm>
         <h1>
             Test your Reaction Speed
         </h1>
         <p>
             Reaction Speed is a good way to test how good of a gamer you will be. <br>
-            This is because majority of games requires some sort of spontaneous reaction.
+            This is because majority of games requires some sort of spontaneous reaction. <br> <br>
         </p>
         <a href="" id="startbtn">Begin the Test</a>
     </div>
