--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="./style/style.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
 <body>
-    <div class="d-flex flex-column justify-content-center p-3 bg-success">
+    <!--<div class="d-flex flex-column justify-content-center p-3 bg-success">-->
+    <div class = introForm>
         <h1>How Good of a Gamer are you?</h1>        
         <p>
             This test will consists of a reaction speed and accuracy test.<br>
-            This will determine how "Good" of a gamer you could be.
+            This will determine how "Good" of a gamer you could be. <br><br>
         </p>
-        <a href="Reaction Test.html" id="startbtn">Click to Start</button>
+        <a href="./ReactionTest.html" id="startbtn">Click to Start</button>
     </div>
 </body>
 </html>
