update css positioning of the titles and buttons

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <!--<div class="d-flex flex-column justify-content-center p-3 bg-success">-->
     <div class = introForm>
-        <h1>How Good of a Gamer are you?</h1>        
+        <h1><center>How Good of a Gamer are you?</center></h1>        
         <p>
             This test will consists of a reaction speed and accuracy test.<br>
             This will determine how "Good" of a gamer you could be. <br><br>
         </p>
-        <a href="./ReactionTest.html" id="startbtn">Click to Start</button>
+        <center><button><a href="./ReactionTest.html" id="startbtn">Click to Start</a></button></center>
     </div>
 </body>
+<footer>
+    <p>This test is created by Amos and Jun Jie and this test result may not be accurate</p>
+</footer>
 </html>
