FInish up of the designing of the first two pages

--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <div class = testForm>
-        <h1>
+        <center><h1>
             Test your Reaction Speed
-        </h1>
+        </h1></center>
         <p>
             Reaction Speed is a good way to test how good of a gamer you will be. <br>
             This is because majority of games requires some sort of spontaneous reaction. <br> <br>
         </p>
-        <a href="" id="startbtn">Begin the Test</a>
+        <br>
+        <br>
+        <center><a href="" id="startbtn">Begin the Test</a></center>
+        <br>
+        <br>
     </div>
 </body>
 </html>
