--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 <body>
     <!--<div class="d-flex flex-column justify-content-center p-3 bg-success">-->
     <div class = introForm>
-        <h1><center>How Good of a Gamer are you?</center></h1>        
+        <center><h1>How Good of a Gamer are you?</h1></center>        
         <p>
             This test will consists of a reaction speed and accuracy test.<br>
             This will determine how "Good" of a gamer you could be. <br><br>
         </p>
-        <center><button><a href="./ReactionTest.html" id="startbtn">Click to Start</a></button></center>
+        <br>
+        <br>
+        <center><a href="./ReactionTest.html" id="startbtn">Click to Start</a></center>
+        <br>
+        <br>
     </div>
 </body>
 <footer>
-    <p>This test is created by Amos and Jun Jie and this test result may not be accurate</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center><p>This test is created by Amos and Jun Jie and this test result may not be accurate</p></center>
 </footer>
 </html>
