Updates to the javascript and test run

--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Page</title>
-    <script src="./javascript/script.js" async></script>
 </head>
 <body>
+    <div id = "box">
+        <center><button id="start" onclick="Start()">BEGIN</button></center>
+        <button id="circle" onclick="Random()"></button>
+    </div>
+<script src="./javascript/script.js"></script>
 </body>
