--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -7,7 +7,14 @@
     <title>Test Page</title>
 </head>
 <body>
+    <div id="stopwatch">
+        <p id="timer">Time: 00:00:00</p>
+        <p if="fulltime"></p>
+    </div>
     <div id = "box">
+        <br>
+        <br>
+        <br>
         <center><button id="start" onclick="Start()">BEGIN</button></center>
         <button id="circle" onclick="Random()"></button>
     </div>
