--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +7,10 @@
 </head>
 <body>
     <div id = "box">
+        <div class="description">
+            After you click Start, circles will start appearing on the screen
+            and you have to click them as fast as possible for 1 minute.
+        </div>
         <center><button id="start" onclick="Start()">BEGIN</button></center>
         <button id="circle" onclick="Random()"></button>
     </div>
