--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +8,11 @@
 <body>
     <!--<div class="d-flex flex-column justify-content-center p-3 bg-success">-->
     <div class = introForm>
-        <center><h1>How Good of a Gamer are you?</h1></center>        
-        <p>
+        <center><h1 style="padding: 10px;">How Good of a Gamer are you?</h1></center>        
+        <p style="text-align: center;">
             This test will consists of a reaction speed and accuracy test.<br>
             This will determine how "Good" of a gamer you could be. <br><br>
         </p>
-        <br>
         <br>
         <center><a href="./ReactionTest.html" id="startbtn">Click to Start</a></center>
         <br>
@@ -22,8 +20,6 @@
     </div>
 </body>
 <footer>
-    <br>
-    <br>
     <br>
     <br>
     <center><p>This test is created by Amos and Jun Jie and this test result may not be accurate</p></center>
