changed start id to begin and removed center tag

--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -15,7 +15,7 @@
             After you click Start, circles will start appearing on the screen
             and you have to click them as fast as possible for 1 minute.
         </div>
-        <center><button id="start" onclick="Start()">BEGIN</button></center>
+        <button id="begin" onclick="Start()">BEGIN</button>
         <button id="circle" onclick="Random()"></button>
     </div>
 <script src="./javascript/script.js"></script>
