--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <title>Home Page</title>
 </head>
 <body>
-    <!--<div class="d-flex flex-column justify-content-center p-3 bg-success">-->
     <div class = introForm>
-        <center><h1 style="padding: 10px;">How Good of a Gamer are you?</h1></center>        
-        <p style="text-align: center;">
-            This test will consists of a reaction speed and accuracy test.<br>
-            This will determine how "Good" of a gamer you could be. <br><br>
+        <h1 class="headtext">How Good of a Gamer are you?</h1>        
+        <p class="description">
+            This test will consists of a reaction speed and accuracy test. <br><br>
+            This will determine how "Good" of a gamer you could be. <br>
         </p>
         <br>
-        <center><a href="./ReactionTest.html" id="startbtn">Click to Start</a></center>
+        <a href="./ReactionTest.html" id="startbtn">Click to Start</a>
         <br>
         <br>
     </div>
 </body>
 <footer>
-    <br>
-    <br>
-    <center><p>This test is created by Amos and Jun Jie and this test result may not be accurate</p></center>
+    <p>
+        Disclaimer: 
+        This test is created by Amos and Jun Jie and this test result may not be accurate
+    </p>
 </footer>
 </html>
