--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div id="stopwatch">
-        <p id="timer">Time: 00:00:00</p>
+        <p id="timer">Time: 00: 00: 00</p>
         <p if="fulltime"></p>
     </div>
     <div id = "box">
-        <div class="description">
+        <div id="description">
             After you click Start, circles will start appearing on the screen
             and you have to click them as fast as possible for 1 minute.
         </div>
