addition of add to leaderboard function

--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -48,6 +48,19 @@
                 </div>
             </div>
         </div>
+        <div id="popup3" class="popupbg" style="display:none;">
+            <div class = "popupcontent animate">
+                <div class="popupcontainer" id="leaderboard">
+                    <h1>
+                        <u>Leaderboard</u>
+                    </h1>
+                    <br>
+                    <p></p>
+                    <button id="backtoHome" onclick="">Home</button>
+                    <button id="reset" onclick="Reset()">Retry Test</button>
+                </div>
+            </div>
+        </div>
         <button id="circle" onclick="Random()"></button>
     </div>
 <script src="./javascript/script.js"></script>
