changes to input types of leaderboard button

--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -43,7 +43,7 @@
                     <p id="averageTime"></p><br>
                     <p id="fastestTime"></p><br>
                     <p id="slowestTime"></p><br>
-                    <button id="addLeaderboard" onclick="">Add to Leaderboard</button>
+                    <input type="submit" id="addLeaderboard" value="Add To Leaderboard">
                     <button id="reset" onclick="Reset()">Retry Test</button>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     </h1>
                     <br>
                     <p></p>
-                    <button id="backtoHome" onclick="">Home</button>
+                    <a href="./index.html" id="backtoHome" >Home</a>
                     <button id="reset" onclick="Reset()">Retry Test</button>
                 </div>
             </div>
