--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -63,5 +63,6 @@
         </div>
         <button id="circle" onclick="Random()"></button>
     </div>
-<script src="./javascript/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="./javascript/script.js" ></script>
 </body>
