minor changes to timer code, and restdb code

--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -43,7 +43,7 @@
                     <p id="averageTime"></p><br>
                     <p id="fastestTime"></p><br>
                     <p id="slowestTime"></p><br>
-                    <input type="submit" id="addLeaderboard" value="Add To Leaderboard">
+                    <input type="submit" id="showLeaderboard" value="Show Leaderboard">
                     <button id="reset" onclick="Reset()">Retry Test</button>
                 </div>
             </div>
