--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             This will determine how "Good" of a gamer you could be. <br>
         </p>
         <br>
-        <a href="./ReactionTest.html" id="startbtn">Click to Start</a>
+        <a href="./ReactionTest.html" id="startbtn" class="btn">Click to Start</a>
         <br>
         <br>
     </div>
