--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -58,7 +58,7 @@
                     <br>
                     <p></p>
                     <button id="addLeaderboard" class="btn">Add to Leaderboard</button>
-                    <a href="./index.html" id="backtoHome" >Home</a>
+                    <a href="./index.html" id="backtoHome" class="btn">Home</a>
                 </div>
             </div>
         </div>
