--- a/ReactionTest.html
+++ b/ReactionTest.html
@@ -80,7 +80,7 @@
         </div>
         <div id="popup5" class="popupbg" style="display: none;">
             <div class ="popupcontent animate">
-                <form class="popupcontainer" id="addToLeaderboard">
+                <div class="popupcontainer">
                     <h1>
                         <u>Successfully Added</u>
                     </h1>
